"Added sentiment analysis and journal summarization functionality, removed EmotionSchema, and updated JournalSchema and package dependencies."

--- a/backend/package.json
+++ b/backend/package.json
@@ -11,6 +11,7 @@
   "author": "keerthan reddy kolli",
   "license": "ISC",
   "dependencies": {
+    "axios": "^1.7.7",
     "bcrypt": "^5.1.1",
     "body-parser": "^1.20.3",
     "cors": "^2.8.5",
