--- a/backend/package.json
+++ b/backend/package.json
@@ -20,8 +20,10 @@
     "dotenv": "^16.4.5",
     "express": "^4.21.0",
     "express-validator": "^7.2.0",
+    "googleapis": "^144.0.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.7.0",
+    "nodemailer": "^6.9.15",
     "vader-sentiment": "^1.1.3"
   },
   "devDependencies": {
