--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,12 +7,14 @@
     "@emotion/styled": "^11.13.0",
     "@mui/material": "^6.1.4",
     "@mui/x-charts": "^7.21.0",
+    "@mui/x-date-pickers": "^7.21.0",
     "@ramonak/react-progress-bar": "^5.3.0",
     "@reduxjs/toolkit": "^2.2.8",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.7.7",
+    "dayjs": "^1.11.13",
     "js-cookie": "^3.0.5",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
