--- a/backend/vercel.json
+++ b/backend/vercel.json
@@ -1,5 +1,9 @@
 {
+  "installCommand": "npm install --legacy-peer-deps",
   "version": 2,
-  "builds": [{ "src": "./index.js", "use": "@vercel/node" }],
+  "builds": [
+    { "src": "./index.js", "use": "@vercel/node" },
+    { "src": "src/**/*", "use": "@vercel/static" }
+  ],
   "routes": [{ "src": "/(.*)", "dest": "/" }]
 }
