--- a/backend/package.json
+++ b/backend/package.json
@@ -8,13 +8,15 @@
     "start": "nodemon index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "engines": {
+    "node": "20.x"
+  },
   "author": "keerthan reddy kolli",
   "license": "ISC",
   "dependencies": {
     "@google/generative-ai": "^0.21.0",
-    "@huggingface/inference": "^2.8.1",
     "axios": "^1.7.7",
-    "bcrypt": "^5.1.1",
+    "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.3",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
