--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,11 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "@types/js-cookie": "^3.0.6",
+    "@types/react": "^18.3.12",
+    "@types/react-dom": "^18.3.1",
+    "@types/react-redux": "^7.1.34",
+    "@types/react-router-dom": "^5.3.3",
     "axios": "^1.7.7",
     "dayjs": "^1.11.13",
     "js-cookie": "^3.0.5",
@@ -23,6 +28,7 @@
     "react-scripts": "5.0.1",
     "recharts": "^2.13.0",
     "sweetalert": "^2.1.2",
+    "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
